force-app/main/default/objects/BL_BriteLeagueSettings__c/BL_BriteLeagueSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Brite League Settings</label>
</CustomObject>