force-app/main/default/objects/BL_BriteLeagueSettings__c/fields/Default_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Default_Image_URL__c</fullName>
    <defaultValue>&quot;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdyq2y3f1IKjJEkyq7Dcx0oSQszq9VVm3lsiRbAR7BRCN0NCNG&quot;</defaultValue>
    <label>Default Image URL</label>
    <type>Url</type>
</CustomField>