force-app/main/default/objects/BL_BriteLeagueSettings__c/fields/Enabled_League_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Enabled_League_Record_Types__c</fullName>
    <description>Comma separated list of enabled League Record Type developer names.</description>
    <inlineHelpText>Comma separated list of enabled League Record Type developer names.</inlineHelpText>
    <label>Enabled League Record Types</label>
    <type>TextArea</type>
</CustomField>