force-app/main/default/objects/BL_BriteLeagueSettings__c/fields/Skip_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation Rules</label>
    <type>Checkbox</type>
</CustomField>